Fixed overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -59,3 +59,7 @@ img {
   align-items: center;
   margin: 0 auto;
 }
+
+.row {
+  overflow: hidden;
+}
